2017-09-15  Wenson Hsieh  <wenson_hsieh@apple.com>

        Avoid style recomputation when forwarding a focus event to an text field's input type
        https://bugs.webkit.org/show_bug.cgi?id=176160
        <rdar://problem/34184820>

        Reviewed by Ryosuke Niwa.

        Adds a new layout test verifying that we don't crash when changing the input type from within a focus event listener.

        * fast/forms/change-input-type-in-focus-handler-expected.txt: Added.
        * fast/forms/change-input-type-in-focus-handler.html: Added.

2017-09-15  Brent Fulgham  <bfulgham@apple.com>

        Make DocumentLoader a FrameDestructionObserver
        https://bugs.webkit.org/show_bug.cgi?id=176364
        <rdar://problem/34254780>

        Reviewed by Alex Christensen.

        * fast/events/beforeunload-dom-manipulation-crash-expected.txt: Added.
        * fast/events/beforeunload-dom-manipulation-crash.html: Added.

2017-09-14  Wenson Hsieh  <wenson_hsieh@apple.com>

        fast/forms/append-children-during-form-submission.html fails due to a text diff on iOS
        https://bugs.webkit.org/show_bug.cgi?id=176908

        Reviewed by Tim Horton.

        Tweak an existing layout test added in r222005 to make its expectation consistent across all platforms.

        * fast/forms/append-children-during-form-submission-expected.txt:
        * fast/forms/append-children-during-form-submission.html:
        * platform/ios/fast/forms/append-children-during-form-submission-expected.txt: Removed.
        * platform/mac-elcapitan/fast/forms/append-children-during-form-submission-expected.txt: Removed.

2017-09-13  Wenson Hsieh  <wenson_hsieh@apple.com>

        Submitting a form can cause HTMLFormElement's associated elements vector to be mutated during iteration
        https://bugs.webkit.org/show_bug.cgi?id=176368
        <rdar://problem/34254998>

        Reviewed by Ryosuke Niwa.
