@@ -1,3 +1,14 @@
+2017-09-18  Antti Koivisto  <antti@apple.com>
+
+        Avoid style resolution when clearing focused element.
+        https://bugs.webkit.org/show_bug.cgi?id=176224
+        <rdar://problem/34206409>
+
+        Reviewed by Zalan Bujtas.
+
+        * fast/dom/focus-style-resolution-expected.txt: Added.
+        * fast/dom/focus-style-resolution.html: Added.
+
 2017-09-15  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Avoid style recomputation when forwarding a focus event to an text field's input type
